INTYG-3206: Responsiv design för sjukskrivning i LISJP

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -22,28 +22,42 @@
   <wc-validation-group field-type="{{to.type}}"
                        validations="formState.viewState.common.validationMessagesByField[options.key]"
                        kompletteringar="hasKompletteringar()">
-    <div class="form-inline sjukskrivningar-section" data-ng-repeat="field in to.fields">
+    <div class="form-inline sjukskrivningar-section clearfix" data-ng-repeat="field in to.fields">
       <div class="row">
         <wc-validation-wrapper field-type="date-period" validations="getValidationsForPeriod(field)">
-          <div class="col-md-3">
+          <div class="col-vlg-auto col-lg-12 col-md-4 col-sm-12">
               <label class="big-checkbox-label checkbox-inline">
                 <input class="big-checkbox" type="checkbox" ng-model="viewstate.periods[field].checked" ng-change="viewstate.updateCheckBox(field)">
                 <span dynamic-label key="{{to.code}}.{{field}}.RBK"></span>
               </label>
               <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{field}}.HLP"></span>
           </div>
-          <div class="col-md-4">
-              <label for="{{options.key}}-{{field}}-from">från och med</label>
-              <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="from"></span>
-          </div>
-          <div class="col-md-4">
-              <label for="{{options.key}}-{{field}}-tom">till och med</label>
-              <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="tom"></span>
+          <div class="clearfix invisible-vlg visible-lg-block visible-sm-block"></div>
+          <div class="col-vlg-auto col-vlg-pull-right">
+            <div class="col-vlg-auto
+                        col-lg-auto col-lg-no-padding-right
+                        col-md-8
+                        col-sm-12">
+              <div class="sjukskrivningar_period">
+                <label for="{{options.key}}-{{field}}-from">från och med</label>
+                <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="from"></span>
+              </div>
+              <div style="clear:right"></div>
+            </div>
+            <div class="col-vlg-auto
+                        col-lg-auto
+                        col-md-12
+                        col-sm-12">
+              <div class="sjukskrivningar_period">
+                <label for="{{options.key}}-{{field}}-tom">till och med</label>
+                <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="tom"></span>
+              </div>
+            </div>
           </div>
         </wc-validation-wrapper>
       </div>
 
-      <div class="fold-animation fold-slide-animation" ng-if="viewstate.periods[field].valid">
+      <div class="col-lg-pull-none pull-right fold-animation fold-slide-animation" ng-if="viewstate.periods[field].valid">
         Arbetstid: {{viewstate.periods[field].hoursPerWeek | number : 2}} timmar/vecka i {{viewstate.periods[field].days}} dagar.
       </div>
 
