--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
@@ -8,8 +8,8 @@
   </div>
 
   <div data-ng-repeat="choice in to.choices">
-    <label class="big-checkbox-label checkbox" ng-class="{disabled:to.disabled[choice]}">
-      <input id="{{options.key}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice]" ng-disabled="to.disabled[choice]">
+    <label class="big-checkbox-label checkbox">
+      <input id="{{options.key}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice]">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
     </label>
     <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{choice}}.HLP"></span>
