--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -1,5 +1,5 @@
 <div>
-  <div wc-print-header title-id="{{intygstyp}}.label.certtitle" print-message-id="print.label.{{viewState.common.intygProperties.printStatus}}"
+  <div wc-print-header title-id="{{intygsnamn}}" print-message-id="print.label.{{viewState.common.intygProperties.printStatus}}"
        intygs-id="viewState.common.intygModel.id"></div>
 
   <!-- error message -->
