INTYG-3317: Uppdaterade idn på fält och categorynames i factories för att scroll ska funka.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wcFieldStatic.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wcFieldStatic.formly.html
@@ -1,5 +1,5 @@
 <div>
-  <a id="anchor.{{to.categoryName}}" name="anchor.{{to.categoryName}}"></a>
+  <a id="anchor-{{to.categoryName}}" name="anchor.{{to.categoryName}}"></a>
   <div wc-field
      field-label="{{to.staticLabel}}"
      field-help-text="{{to.staticHelp}}"
