--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -10,6 +10,6 @@
     <span wc-help-mark ng-if="!to.disableHelp" field-dynamic-help-text="{{to.label + '.HLP'}}"></span>
   </div>
   <div class="col-md-6">
-    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose"></span>
+    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="onBlur()"></span>
   </div>
 </div>
