--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.formly.html
@@ -14,7 +14,7 @@
 
       <label class="radio">
         <input id="{{options.key}}-{{choice.id}}" type="radio" name="{{options.key}}" class="big-radio"
-               ng-model="model[options.key].typ" value="{{choice.id}}">
+               ng-model="model[options.key].typ" value="{{choice.id}}" ng-change="validate()">
         <span dynamic-label key="{{to.code}}.{{choice.id}}.RBK"></span>
       </label>
       <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{choice.id}}.HLP"></span>
@@ -23,6 +23,7 @@
         <wc-validation-wrapper field-type="select"
                                validations="formState.viewState.common.validationMessagesByField[options.key + '.dagartillarbete']">
           <ui-select theme="bootstrap" search-enabled="false" ng-model="model[options.key].dagarTillArbete"
+                     on-select="validate()"
                      ng-disabled="model[options.key].typ !== choice.id" id="prognosDagarTillArbete-{{$index}}-typ"
                      name="prognosDagarTillArbete-{{$index}}" append-to-body="false">
             <ui-select-match>
