--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/validationGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/validationGroup.formly.html
@@ -1,7 +1,7 @@
 <wc-validation-group id="validationGroup-{{to.validationGroup}}"
                      field-type="{{to.type}}"
-                     warnings="formState.viewState.common.warningMessagesByField[to.validationGroup.toLowerCase()]"
-                     validations="formState.viewState.common.validationMessagesByField[to.validationGroup.toLowerCase()]"
+                     warnings="formState.viewState.common.validation.warningMessagesByField[to.validationGroup.toLowerCase()]"
+                     validations="formState.viewState.common.validation.messagesByField[to.validationGroup.toLowerCase()]"
                      kompletteringar="formState.hasKompletteringar(to.kompletteringGroup)">
   <formly-transclude></formly-transclude>
 </wc-validation-group>
