INTYG-3129: Fixade hoppande visa/dölj knapp

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -14,8 +14,7 @@
       <div class="header-fix-panel">
         <div class="header-fix-top-expand">
           <div class="header-fix-top-expand-wrapper">
-            <button type="button" class="btn btn-link" ng-click="toggleHeader()"><span ng-if="viewState.common.collapsedHeader">Visa</span><span
-                ng-if="!viewState.common.collapsedHeader">Dölj</span> meny
+            <button type="button" class="btn btn-link" ng-click="toggleHeader()">{{viewState.common.showHideButtonText}}</span>
             </button>
           </div>
         </div>
