INTYG-3129: Fix på fixen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -14,8 +14,7 @@
       <div class="header-fix-panel">
         <div class="header-fix-top-expand">
           <div class="header-fix-top-expand-wrapper">
-            <button type="button" class="btn btn-link" ng-click="toggleHeader()">{{viewState.common.showHideButtonText}}</span>
-            </button>
+            <button type="button" class="btn btn-link" ng-click="toggleHeader()">{{viewState.common.showHideButtonText}}</button>
           </div>
         </div>
 
