INTYG-3166: Dolde datepickerknappar i utskrifter.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
@@ -18,7 +18,7 @@
            wc-blur-on-enter
            wc-date-picker-field-input/>
     <span class="input-group-btn">
-      <button type="button" id="{{domId}}-toggle" class="btn btn-default" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="glyphicon glyphicon-calendar"></i></button>
+      <button type="button" id="{{domId}}-toggle" class="btn btn-default print-hide" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="glyphicon glyphicon-calendar"></i></button>
     </span>
   </span>
 </span>
