--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
@@ -1,6 +1,6 @@
 <div class="form-inline">
   <wc-form-label to="to"></wc-form-label>
   <div>
-    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="onBlur()"></span>
+    <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose" on-blur="validate()"></span>
   </div>
 </div>
