--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFieldStatic.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcFieldStatic.formly.html
@@ -3,7 +3,7 @@
   <div wc-field
      field-label="{{to.staticLabel}}"
      field-help-text="{{to.staticHelp}}"
-     field-has-errors="formState.viewState.common.validationMessagesGrouped[to.categoryName]" class="field-fade">
+     field-has-errors="formState.viewState.common.validation.messagesGrouped[to.categoryName]" class="field-fade">
     <formly-transclude></formly-transclude>
   </div>
 </div>
