--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcField.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/wcField.formly.html
@@ -3,7 +3,7 @@
   <div wc-field
        field-dynamic-label="KAT_{{to.category}}.RBK"
        field-dynamic-help-text="KAT_{{to.category}}.HLP"
-       field-has-errors="formState.viewState.common.validationMessagesGrouped[to.categoryName]"
+       field-has-errors="formState.viewState.common.validation.messagesGrouped[to.categoryName]"
        field-required="{{to.required}}"
        class="field-fade">
     <formly-transclude></formly-transclude>
