--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -23,7 +23,10 @@
           <div class="row">
             <div class="pull-left">
 
-              <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton" wc-authority="NAVIGERING" class="backlink-icon" href wc-back title="Tillbaka till Skriv intyg"></a>
+              <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton"
+                                                                wc-authority="NAVIGERING"
+                                                                href wc-back title="Tillbaka till Skriv intyg"
+                                                                class="backlink-icon glyphicon glyphicon-arrow-left"></a>
                 <span>{{intygsnamn}}</span><span wc-help-mark field-tooltip-placement="bottom" field-dynamic-help-text="FRM_2.RBK"
                                                                                                  help-mark-class="header-fix-panel__popover-content"
                                                                                                  help-mark-appendtobody="false"></span>
