--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -6,15 +6,15 @@
       <span wc-authority="!NAVIGERING" class="headerbox-logo pull-left">
         <img alt="Till startsidan" src="/img/webcert_logo.png" /></span>
       <span class="headerbox-date pull-left">
-                  <span id="wc-header-location-date" class="location">{{today | date:"shortDate"}}</span>
-                  <span id="wc-header-location-care-giver" class="location" ng-if="user.valdVardgivare"> - {{user.valdVardgivare.namn}}</span>
-                  <span id="wc-header-location-care-unit" class="location" ng-if="user.valdVardgivare" wc-authority role="!PRIVATLAKARE"> - {{user.valdVardenhet.namn}}</span><br>
-                  <span id="otherLocations" class="otherLocations" wc-authority="ATKOMST_ANDRA_ENHETER"
-                        ng-show="(stat.intygAndraEnheter+stat.fragaSvarAndraEnheter) > 0"><span
-                      style="font-weight:bold">{{stat.intygAndraEnheter+stat.fragaSvarAndraEnheter}}</span> ej hanterade frågor och ej signerade utkast på andra vårdenheter.</span>
+        <span ng-class="{'single-location': !hasOtherLocationsStats() && !moreThanOneUnit()}">
+          <span id="wc-header-location-date" class="location">{{today | date:"shortDate"}}</span>
+          <span id="wc-header-location-care-giver" class="location" ng-if="user.valdVardgivare"> - {{user.valdVardgivare.namn}}</span>
+          <span id="wc-header-location-care-unit" class="location" ng-if="user.valdVardgivare" wc-authority role="!PRIVATLAKARE"> - {{user.valdVardenhet.namn}}</span><br>
+        </span>
+        <span id="otherLocations" class="otherLocations" wc-authority="ATKOMST_ANDRA_ENHETER"
+              ng-show="hasOtherLocationsStats()"><span class="bold">{{otherLocationsStatsCount()}}</span> ej hanterade frågor och ej signerade utkast på andra vårdenheter.</span>
         <a wc-authority="ATKOMST_ANDRA_ENHETER" id="wc-care-unit-clinic-selector-link" tabindex="0" href
-           class="otherLocations" ng-show="user.totaltAntalVardenheter > 1" data-ng-click="openChangeCareUnitDialog()">Byt
-          vårdenhet</a>
+           class="otherLocations" ng-show="moreThanOneUnit()" data-ng-click="openChangeCareUnitDialog()">Byt vårdenhet</a>
       </span>
     </div>
     <div class="headerbox-user pull-right">
@@ -43,7 +43,7 @@
           <li ng-class="{active: isActive(menu.link)}" ng-repeat="menu in menuDefs">
             <a ng-href="{{menu.link}}" ng-show="(menu.requiresDoctor && isDoctor) || !menu.requiresDoctor"
                id="{{menu.id}}">{{menu.label}}
-              <span id="{{menu.statNumberId}}" ng-if="menu.getStat()>0" class="stat-circle stat-circle-active"
+              <span id="{{menu.statNumberId}}" ng-if="menu.getStat()>0" class="badge badge__stat"
                     title="{{menu.statTooltip}}">{{menu.getStat()}}</span></a>
           </li>
         </ul>
