--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -1,6 +1,7 @@
 <div wc-print-header title-id="{{intygsnamn}}" print-message-id="print.label.draft" intygs-id="intyg.id"></div>
 <div class="print-show">
-  <label class="control-label">{{viewState.intygModel.grundData.patient.fullstandigtNamn}} - {{viewState.intygModel.grundData.patient.personId | PersonIdFormatter}}</label>
+  <label class="control-label">{{viewState.intygModel.grundData.patient.fullstandigtNamn}} -
+    {{viewState.intygModel.grundData.patient.personId | PersonIdFormatter}}</label>
 </div>
 
 <div class="header-fix-top print-hide" wc-size-source="viewState.common.headerSize">
@@ -9,12 +10,15 @@
   </div>
 
   <div ng-hide="viewState.common.error.activeErrorMessageKey">
-    <div wc-spinner label="info.loadingdata" show-spinner="!viewState.common.doneLoading" show-content="viewState.common.doneLoading" is-header="true">
+    <div wc-spinner label="info.loadingdata" show-spinner="!viewState.common.doneLoading"
+         show-content="viewState.common.doneLoading" is-header="true">
 
       <div class="header-fix-panel">
         <div class="header-fix-top-expand">
           <div class="header-fix-top-expand-wrapper">
-            <button type="button" class="btn btn-link" ng-click="toggleHeader()">{{viewState.common.showHideButtonText}}</button>
+            <button type="button" class="btn btn-link" ng-click="toggleHeader()">
+              {{viewState.common.showHideButtonText}}
+            </button>
           </div>
         </div>
 
@@ -23,30 +27,22 @@
           <div class="row">
             <div class="pull-left">
 
-              <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton"
-                                                                wc-authority="NAVIGERING"
-                                                                href wc-back title="Tillbaka till Skriv intyg"
+              <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton" wc-authority="NAVIGERING" href
+                                                                wc-back title="Tillbaka till Skriv intyg"
                                                                 class="backlink-icon glyphicon glyphicon-arrow-left"></a>
-                <span>{{intygsnamn}}</span><span wc-help-mark field-tooltip-placement="bottom" field-dynamic-help-text="FRM_2.RBK"
-                                                                                                 help-mark-class="header-fix-panel__popover-content"
-                                                                                                 help-mark-appendtobody="false"></span>
+                <span>{{intygsnamn}}</span><span wc-help-mark field-tooltip-placement="bottom"
+                                                 field-dynamic-help-text="FRM_2.RBK"
+                                                 help-mark-class="header-fix-panel__popover-content"
+                                                 help-mark-appendtobody="false"></span>
               </h1>
 
               <div class="form-group buttonbar">
-                <button type="button" class="btn btn-default btn-secondary" ng-if="!viewState.common.showComplete" ng-disabled="viewState.common.intyg.isComplete"
-                        ng-click="toggleShowComplete()" id="showCompleteButton"
-                        title="Visar vilka obligatoriska fält i utkastet som inte är ifyllda. Alla obligatoriska fält måste vara ifyllda för att utkastet ska kunna signeras.">
-                  Visa vad som saknas
-                </button>
-                <button type="button" class="btn btn-default btn-secondary" ng-if="viewState.common.showComplete" ng-disabled="viewState.common.intyg.isComplete"
-                        ng-click="toggleShowComplete()" id="hideCompleteButton"
-                        title="Visar vilka obligatoriska fält i utkastet som inte är ifyllda. Alla obligatoriska fält måste vara ifyllda för att utkastet ska kunna signeras.">
-                  Dölj vad som saknas
-                </button>
-                <button type="button" id="skriv-ut-utkast" class="btn btn-default btn-secondary" ng-if="!viewState.common.isSigned" ng-click="print()" title="Skriver ut utkastet.">
+                <button type="button" id="skriv-ut-utkast" class="btn btn-default btn-secondary"
+                        ng-if="!viewState.common.isSigned" ng-click="print()" title="Skriver ut utkastet.">
                   <i class="glyphicon glyphicon-print"></i>
                 </button>
-                <button type="button" id="ta-bort-utkast" class="btn btn-default btn-secondary" ng-if="!viewState.common.isSigned" ng-click="discard()"
+                <button type="button" id="ta-bort-utkast" class="btn btn-default btn-secondary"
+                        ng-if="!viewState.common.isSigned" ng-click="discard()"
                         title="Klicka på papperskorgen för att radera utkastet.">
                   <i class="glyphicon glyphicon-trash"></i>
                 </button>
@@ -57,35 +53,35 @@
 
               <div wc-intyg-patient-namn-personnummer
                    patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
-                   person-id="viewState.intygModel.grundData.patient.personId"
-                   class="utkast-header-person-id"></div>
+                   person-id="viewState.intygModel.grundData.patient.personId" class="utkast-header-person-id"></div>
 
-                <!-- current draft status -->
-                <div class="utkast-header-status">
-                  <!-- Just in case (should never be here for a signed utkast)-->
-                  <div id="certificate-is-sent-to-it-message-text" ng-if="viewState.common.isSigned">
-                    <span message key="draft.status.signed"></span>
-                  </div>
-                  <!-- complete -->
-                  <div ng-if="!viewState.common.saving && certForm.$pristine && viewState.common.intyg.isComplete && !viewState.common.isSigned">
-                    <span id="intyget-sparat-och-komplett-meddelande" message key="draft.status.complete"></span>
-                  </div>
-                  <!-- incomplete -->
-                  <div ng-if="!viewState.common.saving && certForm.$pristine && !viewState.common.intyg.isComplete">
-                    <span id="intyget-sparat-och-ej-komplett-meddelande" message key="draft.status.incomplete"></span>
-                  </div>
-                  <!-- form changed -->
-                  <div ng-if="viewState.common.saving || certForm.$dirty"><span message key="draft.status.changed"></span></div>
+              <!-- current draft status -->
+              <div class="utkast-header-status">
+                <!-- Just in case (should never be here for a signed utkast)-->
+                <div id="certificate-is-sent-to-it-message-text" ng-if="viewState.common.isSigned">
+                  <span message key="draft.status.signed"></span>
                 </div>
+                <!-- complete -->
+                <div
+                    ng-if="!viewState.common.saving && certForm.$pristine && viewState.common.intyg.isComplete && !viewState.common.isSigned">
+                  <span id="intyget-sparat-och-komplett-meddelande" message key="draft.status.complete"></span>
+                </div>
+                <!-- incomplete -->
+                <div ng-if="!viewState.common.saving && certForm.$pristine && !viewState.common.intyg.isComplete">
+                  <span id="intyget-sparat-och-ej-komplett-meddelande" message key="draft.status.incomplete"></span>
+                </div>
+                <!-- form changed -->
+                <div ng-if="viewState.common.saving || certForm.$dirty"><span message key="draft.status.changed"></span>
+                </div>
+              </div>
 
             </div>
           </div>
 
-
-
           <!-- Error/info messages -->
           <div class="row">
-            <div wc-secrecy-mark-message person-id="viewState.intygModel.grundData.patient.personId" type="utkast"></div>
+            <div wc-secrecy-mark-message person-id="viewState.intygModel.grundData.patient.personId"
+                 type="utkast"></div>
             <div ng-show="viewState.common.error.saveErrorCode != null" class="col-md-7">
               <div class="alert alert-danger">
                 <span ng-bind-html="viewState.common.error.saveErrorMessage"></span>
@@ -93,21 +89,16 @@
             </div>
           </div>
 
-
         </div>
       </div>
     </div>
   </div>
 
   <!-- Total fail error messages -->
-  <div id="error-panel" class="intyg-error-panel" ng-show="viewState.common.doneLoading && viewState.common.error.activeErrorMessageKey && !viewState.common.deleted">
+  <div id="error-panel" class="intyg-error-panel"
+       ng-show="viewState.common.doneLoading && viewState.common.error.activeErrorMessageKey && !viewState.common.deleted">
     <div class="alert alert-danger">
       <span message key="{{viewState.common.error.activeErrorMessageKey}}"></span>
     </div>
   </div>
 </div>
-  <ul>
-    <li ng-repeat="message in validationMessages">
-      <span message key="{{message.message}}"></span></li>
-  </ul>
-  <!-- intygeditheader end -->
