--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary.directive.html
@@ -1,9 +1,11 @@
-<div id="visa-vad-som-saknas-lista" class="alert alert-danger" ng-show="viewState.common.showComplete && !viewState.common.intyg.isComplete"
-     style="margin-right: 20px">
+<div id="visa-vad-som-saknas-lista" ng-show="viewState.common.showComplete && !viewState.common.intyg.isComplete">
   <h3><span message key="draft.saknar-uppgifter"></span></h3>
-  <ul>
-    <li ng-repeat="message in viewState.common.validation.sections">
-      <a href="" ng-click="scrollTo(message)"><span message key="{{viewState.common.intyg.type}}.label.{{message}}"></span></a>
-    </li>
-  </ul>
+  <div class="alert alert-danger" style="margin-right: 20px">
+    <ul>
+      <li ng-repeat="message in viewState.common.validation.sections">
+        <a href="" ng-click="scrollTo(message)"><span message
+                                                      key="{{viewState.common.intyg.type}}.label.{{message}}"></span></a>
+      </li>
+    </ul>
+  </div>
 </div>
