--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -26,7 +26,7 @@
                        kompletteringar="hasKompletteringar()">
     <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in to.fields">
       <div class="row">
-        <wc-validation-wrapper field-type="date-period" validations="getValidationsForPeriod(field)">
+        <div class="clearfix">
           <div class="col-vlg-auto col-lg-12 col-md-4 col-sm-12">
               <label class="big-checkbox-label checkbox-inline">
                 <input class="big-checkbox" type="checkbox" ng-model="viewstate.periods[field].checked"
@@ -43,7 +43,13 @@
                         col-sm-12">
               <div class="sjukskrivningar_period">
                 <label for="{{options.key}}-{{field}}-from">från och med</label>
-                <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="from" on-blur="validate()"></span>
+                <span wc-date-period-field
+                      model="model"
+                      field="{{options.key}}"
+                      index="{{field}}"
+                      type="from"
+                      on-blur="validate()"
+                      ng-class="{'fielderror' : hasValidationError(field, 'from')}"></span>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -53,12 +59,21 @@
                         col-sm-12">
               <div class="sjukskrivningar_period">
                 <label for="{{options.key}}-{{field}}-tom">till och med</label>
-                <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="tom" on-blur="validate()"></span>
+                <span wc-date-period-field
+                      model="model"
+                      field="{{options.key}}"
+                      index="{{field}}"
+                      type="tom"
+                      on-blur="validate()"
+                      ng-class="{'fielderror' : hasValidationError(field, 'tom')}"></span>
               </div>
             </div>
           </div>
-        </wc-validation-wrapper>
+        </div>
       </div>
+
+      <wc-field-validation field-type="sjukskrivning_period"
+                           validations="validationsForPeriod[field]" />
 
       <div class="col-lg-pull-none pull-right fold-animation fold-slide-animation" ng-if="viewstate.periods[field].valid">
         Arbetstid: {{viewstate.periods[field].hoursPerWeek | number : 2}} timmar/vecka i {{viewstate.periods[field].days}} dagar.
@@ -70,6 +85,11 @@
 
     <div ng-if="viewstate.totalDays" class="fold-animation fold-slide-animation">
       Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
+    </div>
+
+    <div>
+      <wc-field-validation field-type="sjukskrivning_period"
+                           validations="overlapValidations" />
     </div>
 
   </wc-validation-group>
