INTYG-3131: Löste flera edgecases vid signeraknappen och felsummeringen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -39,7 +39,7 @@
         <span message key="draft.completion.signinfo"></span>
       </p>
       <button type="button" id="signera-utkast-button" class="btn btn-success"
-              ng-disabled="signingWithSITHSInProgress"
+              ng-disabled="certForm.$dirty || signingWithSITHSInProgress"
               ng-click="sign()"><img ng-show="signingWithSITHSInProgress" ng-src="/img/ajax-loader-small-green.gif" />
         <span message key="common.{{viewState.common.intyg.isKomplettering ? 'signsend' : 'sign'}}"></span>
       </button>
