--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummaryFK.directive.html
@@ -1,4 +1,4 @@
-<div id="visa-vad-som-saknas-lista" ng-show="viewState.common.showComplete && !viewState.common.intyg.isComplete">
+<div id="visa-vad-som-saknas-lista" ng-show="viewState.common.validation.sections.length > 0">
   <h3><span message key="draft.saknar-uppgifter"></span></h3>
   <div class="alert alert-danger" style="margin-right: 20px">
     <ul>
