--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
@@ -1,15 +1,14 @@
 <div class="intyg-block clearfix">
-  <div class="intyg-block__titlerow">
+  <div class="intyg-block__titlerow" ng-if="showTitleRow()">
     <h4 class="intyg-field-number" ng-if="fieldNumber != undefined">
       <span message key="modules.label.field"></span> {{fieldNumber}} </h4>
 
     <h3 class="intyg-block__heading">
       <span ng-if="fieldLabel" message key="{{fieldLabel}}"></span>
-      <span ng-if="fieldDynamicLabel" dynamic-label key="{{ fieldDynamicLabel }}"></span>
+      <span ng-if="fieldDynamicLabel" dynamic-label key="{{fieldDynamicLabel}}"></span>
       {{fieldRequired ? '*' : ''}}
     </h3>
-    <div class="inline-block" ng-if="fieldHelpText != undefined || fieldDynamicHelpText != undefined" wc-help-mark field-help-text="{{fieldHelpText}}"
-         field-dynamic-help-text="{{fieldDynamicHelpText}}"></div>
+    <div class="inline-block" ng-if="fieldHelpText != undefined || fieldDynamicHelpText != undefined" wc-help-mark field-help-text="{{fieldHelpText}}" field-dynamic-help-text="{{fieldDynamicHelpText}}"></div>
   </div>
 	<span class="intyg-block__content" ng-class="{unfilled: filled == 'false', categoryerror: fieldHasErrors, categorykmplt: fieldHasKomplettering}">
     <span class="intyg-field-blank" ng-hide="filled == 'true'"> <span message key="common.notset"></span></span>
