--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -73,9 +73,11 @@
       </div>
 
       <wc-field-validation field-type="sjukskrivning_period"
-                           validations="validationsForPeriod[field]" />
+                           validations="validationsForPeriod[field]">
+      </wc-field-validation>
 
-      <div class="col-lg-pull-none pull-right fold-animation fold-slide-animation" ng-if="viewstate.periods[field].valid">
+      <div class="col-lg-pull-none pull-right fold-animation fold-slide-animation"
+           ng-if="field != 'HELT_NEDSATT' && viewstate.periods[field].valid">
         Arbetstid: {{viewstate.periods[field].hoursPerWeek | number : 2}} timmar/vecka i {{viewstate.periods[field].days}} dagar.
       </div>
 
@@ -89,7 +91,8 @@
 
     <div>
       <wc-field-validation field-type="sjukskrivning_period"
-                           validations="overlapValidations" />
+                           validations="overlapValidations">
+      </wc-field-validation>
     </div>
 
   </wc-validation-group>
