INTYG-3352: Fixat missing label vid utskrift av utkast orsakad av INTYG-3200

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcPrintHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcPrintHeader.directive.html
@@ -3,7 +3,7 @@
   <div class="row">
 
     <div class="col-md-6 print-heading-column-left">
-      <h1 class="page-title"><span message key="{{titleId}}"></span></h1>
+      <h1 class="page-title">{{title}}</h1>
       <p>Intygsid: {{intygsId}}</p>
       <h2><span message key="{{printMessageId}}"></span></h2>
     </div>
