--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -1,4 +1,4 @@
-<div wc-print-header title-id="{{intygsnamn}}" print-message-id="print.label.draft" intygs-id="intyg.id"></div>
+<div wc-print-header title="{{intygsnamn}}" print-message-id="print.label.draft" intygs-id="intyg.id"></div>
 <div class="print-show">
   <label class="control-label">{{viewState.intygModel.grundData.patient.fullstandigtNamn}} -
     {{viewState.intygModel.grundData.patient.personId | PersonIdFormatter}}</label>
