INTYG-3076: Går även ut texten då ett fält exkluderas

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/customize/miFieldSelectable.directive.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/js/directives/customize/miFieldSelectable.directive.html
@@ -21,7 +21,7 @@
       </span>
     </div>
   </span>
-  <span class="text">
+  <span class="text" ng-class="{ 'unfilled' : !fieldModel.vald }">
     <span ng-transclude></span>
   </span>
 </div>
