--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -9,7 +9,7 @@
         <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span> *
         <span wc-help-mark field-dynamic-help-text="DFR_{{to.frgId}}.1.HLP"></span>
     </label>
-		<textarea id="{{options.key}}" name="{{options.key}}" rows='6' class='form-control' ng-model="model[options.key]"
+		<textarea id="{{options.key}}" name="{{options.key}}" rows="6" class="form-control" auto-expand ng-model="model[options.key]"
               maxlength="4000" ng-blur="validate()"></textarea>
 	</div>
 </div>
