--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
@@ -1,8 +1,8 @@
 <div>
   <wc-form-label to="to"></wc-form-label>
-  <textarea id="{{options.key}}" name="{{options.key}}" rows='6' class='form-control' ng-model="model[options.key]"
+  <textarea id="{{options.key}}" name="{{options.key}}" class="form-control" rows="6" auto-expand ng-model="model[options.key]"
             maxlength="4000">
-    </textarea>
+  </textarea>
   <div ng-if="to.subTextId && to.subTextDynId" class="info-transfer">
     <span ng-if="to.subTextId && to.subTextDynId" combined-label dyn-key="{{to.subTextDynId}}.RBK"
           stat-key="{{to.subTextId}}"></span>
