--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntyg.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntyg.html
@@ -1,12 +1,11 @@
-<div class="fk-sit-common-ns luae_fs-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
+<div class="fk-sit-common-ns {{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
   <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
        show-content="viewState.common.doneLoading">
 
     <div ui-view="header"></div>
 
     <div ng-show="!viewState.common.activeErrorMessageKey">
-      <div id="certificate"
-           ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
+      <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
         <div class="row">
           <div class="col-md-12">
             <div class="intyg-body">
@@ -30,26 +29,21 @@
                 </h4>
                 <p id="signeringsdatum">{{viewState.intygModel.grundData.signeringsdatum | date:'longDate'}}</p>
                 <h4>
-                  <span message key="luae_fs.label.kontakt-info"></span>
+                  <span message key="common.label.kontakt-info"></span>
                 </h4>
                 <p>
-                  <span class="text"
-                        id="vardperson_namn">{{viewState.intygModel.grundData.skapadAv.fullstandigtNamn}}</span><br>
+                  <span class="text" id="vardperson_namn">{{viewState.intygModel.grundData.skapadAv.fullstandigtNamn}}</span><br>
                   <span class="text" id="vardperson_enhetsnamn">{{viewState.intygModel.grundData.skapadAv.vardenhet.enhetsnamn}}</span><br>
                   <span class="text" id="vardperson_postadress">{{viewState.intygModel.grundData.skapadAv.vardenhet.postadress}}</span><br>
-                  <span class="text"><span id="vardperson_postnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.postnummer}}</span> <span
-                      id="vardperson_postort">{{viewState.intygModel.grundData.skapadAv.vardenhet.postort}}</span></span><br>
+                  <span class="text"><span id="vardperson_postnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.postnummer}}</span> <span id="vardperson_postort">{{viewState.intygModel.grundData.skapadAv.vardenhet.postort}}</span></span><br>
                   <span class="text" id="vardperson_telefonnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.telefonnummer}}</span><br>
                 </p>
               </div>
 
-            </div>
-            <!-- intyg body -->
+            </div><!-- intyg body -->
           </div>
         </div>
       </div>
-    </div>
-    <!-- entire intyg -->
-  </div>
-  <!--  spinner end -->
+    </div><!-- entire intyg -->
+  </div><!--  spinner end -->
 </div>
