INTYG-3384: Fixed date warnings, broken due to spelling error.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/validationWrapper.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/validationWrapper.formly.html
@@ -3,7 +3,7 @@
                        key="{{options.key}}"
                        komplettering-key="{{to.kompletteringKey}}"
                        hide-komplettering-text="{{to.hideKompletteringText}}"
-                       warnings="formState.viewState.common.validaiton.warningMessagesByField[options.key.toLowerCase()]"
+                       warnings="formState.viewState.common.validation.warningMessagesByField[options.key.toLowerCase()]"
                        validations="formState.viewState.common.validation.messagesByField[options.key.toLowerCase()]">
   <formly-transclude></formly-transclude>
 </wc-validation-wrapper>
