--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -134,7 +134,7 @@
                   ng-click="makulera(viewState.intygModel)"
                   wc-check-vardenhet
                   vardenhet="{{viewState.enhetsId}}"
-                  uib-popover="Makulerar intyget. Vid behov kan intyget ersättas med ett nytt."
+                  uib-popover="Öppnar ett fönster där du kan gå vidare och makulera intyget."
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
                   popover-append-to-body="true"
