INTYG-3392: TS-intyg visar nu info meddelanden i djupintegration + låser adressfält

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -4,7 +4,7 @@
       <span wc-authority="NAVIGERING" class="headerbox-logo pull-left">
         <a id="webcertLogoLink" href="/web/start"><img alt="Till startsidan" src="/img/webcert_logo.png" /></a></span>
       <span wc-authority="!NAVIGERING" class="headerbox-logo pull-left">
-        <img alt="Till startsidan" src="/img/webcert_logo.png" /></span>
+        <span id="webcertLogoLink"><img alt="Till startsidan" src="/img/webcert_logo.png" /></span></span>
       <span class="headerbox-date pull-left">
         <span ng-class="{'single-location': !hasOtherLocationsStats() && !moreThanOneUnit()}">
           <span id="wc-header-location-date" class="location">{{today | date:"shortDate"}}</span>
