--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -2,9 +2,9 @@
   <div class="header clearfix">
     <div class="headerbox">
       <span wc-authority="NAVIGERING" class="headerbox-logo pull-left">
-        <a id="webcertLogoLink" href="/web/start"><img alt="Till startsidan" src="/img/webcert_logo.png" /></a></span>
+        <a id="webcertLogoLink" class="webcertLogo" href="/web/start"><img alt="Till startsidan" src="/img/webcert_logo.png" /></a></span>
       <span wc-authority="!NAVIGERING" class="headerbox-logo pull-left">
-        <span id="webcertLogoLink"><img alt="Till startsidan" src="/img/webcert_logo.png" /></span></span>
+        <span id="webcertLogo" class="webcertLogo" ><img alt="Till startsidan" src="/img/webcert_logo.png" /></span></span>
       <span class="headerbox-date pull-left">
         <span ng-class="{'single-location': !hasOtherLocationsStats() && !moreThanOneUnit()}">
           <span id="wc-header-location-date" class="location">{{today | date:"shortDate"}}</span>
